--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,9 @@
     },
     "extends": [
         "airbnb",
-        "prettier"
+        "prettier",
+        "plugin:prettier/recommended",
+        "prettier/react"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -23,5 +25,6 @@
         "prettier"
     ],
     "rules": {
+      "prettier/prettier": ["error"]
     }
 }
