--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "faker": "4.1.0",
-    "json-server": "^0.15.1",
+    "json-server": "0.15.1",
     "jsonwebtoken": "8.5.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
