--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "0.19.0",
+    "babel-preset-env": "1.7.0",
     "body-parser": "1.19.0",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.15.0",
     "faker": "4.1.0",
+    "jest-cli": "24.9.0",
     "json-server": "0.15.1",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.15",
@@ -20,7 +24,7 @@
     "tailwind:css": "tailwind build src/css/tailwind.src.css -c tailwind.js -o src/css/tailwind.css",
     "start": "npm run tailwind:css && react-scripts start",
     "build": "npm run tailwind:css && react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "mockapi": "node API/server.js"
   },
