--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "lodash": "4.17.15",
+    "axios": "^0.19.0",
     "body-parser": "1.19.0",
     "faker": "4.1.0",
     "json-server": "0.15.1",
     "jsonwebtoken": "8.5.1",
+    "lodash": "4.17.15",
     "prop-types": "15.7.2",
     "react": "16.10.1",
     "react-dom": "16.10.1",
