--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "extends": [
         "airbnb",
         "prettier",
+        "react-app",
         "plugin:prettier/recommended",
         "prettier/react"
     ],
