--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwind:css": "tailwind build src/css/tailwind.src.css -c tailwind.js -o src/css/tailwind.css",
     "start": "npm run tailwind:css && react-scripts start",
     "build": "npm run tailwind:css && react-scripts build",
+    "test:cover": "jest --coverage",
     "test": "jest",
     "eject": "react-scripts eject",
     "mockapi": "node API/server.js"
