--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "16.10.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.2.0",
+    "react-toast-notifications": "^2.2.5",
     "tailwindcss": "1.1.2"
   },
   "scripts": {
